--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   "main": "index.js",
   "repository": "git@github.com:parlr/tifinagh-data.git",
   "author": "Édouard Lopez <contact@edouard-lopez.com>",
-  "license": "apache-2.0"
+  "license": [
+    "apache-2.0",
+    "cc-by-sa-4.0"
+  ]
 }
